--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,12 @@ pandas>=2.0.0
 numpy>=1.24.0
 PyYAML>=6.0
 
+# Statistical analysis
+scipy>=1.11.0
+statsmodels>=0.14.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
 # Code generation
 black>=23.0.0
 
